cleanup code and change from float to bigDecimal